--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -75,6 +75,7 @@
     <string name="shortdesc_SHR">vitesse puces SHR</string>
     <string name="shortdesc_ACC">vitesse puces ACC</string>
     <string name="shortdesc_MEM">vitesse puces MEM</string>
+    <string name="shortdesc_heat">Chaleur produite</string>
     <string name="shortdesc_upgrade">coût pour amélioration</string>
     <string name="shortdesc_lives">vies supplementaires</string>
     <string name="shortdesc_frequency">frequence attaquants</string>
@@ -88,6 +89,7 @@
     <string name="toast_next_stage">Niveau %d</string>
     <string name="toast_stage_cleared">Niveau réussi</string>
     <string name="HERO_EFFECT_CHIPSPEED">réduit le temps de recharge de toutes les puces %s</string>
+    <string name="HERO_EFFECT_HEAT">réduit la géneration de chaleur</string>
     <string name="HERO_EFFECT_STARTINFO">démarre tous les niveaux avec plus d\'info\n</string>
     <string name="HERO_EFFECT_UPGRADECOST">réduit les coûts d\'amélioration</string>
     <string name="HERO_EFFECT_LIVES">accorde des vies supplémentaires</string>
@@ -95,7 +97,7 @@
     <string name="HERO_EFFECT_INFOOVERTIME">gagne de l\'information au fil du temps</string>
     <string name="HERO_EFFECT_ATTSPEED">réduit la vitesse des attaquants</string>
     <string name="HERO_EFFECT_ATTSTRENGTH">réduit la puissance des attaquants</string>
-    <string name="HERO_EFFECT_MAXHEROUPGRADE">Augmente le niveau maximal des autres héros</string>
+    <string name="HERO_EFFECT_MAXHEROUPGRADE">augmente le niveau maximal des autres héros</string>
     <string name="HERO_EFFECT_REFUNDPRICE">"augmente le remboursement lors "</string>
     <string name="HERO_EFFECT_RANGE">augmente la portée des puces %s</string>
     <string name="toast_loading">Chargement ...</string>
@@ -154,7 +156,7 @@
     <string name="settings_fast_fast_forward">\"Fast forward\" rapide</string>
     <string name="kilby">Jack St. Clair Kilby a eu l\'idée de regrouper les éléments semi-conducteurs - tels que les transistors ou les diodes - dans un circuit intégré (CI) au lieu de câbler les composants individuellement sur une plaque. C\'était l\'origine des micro-puces et des processeurs et c\'est ce qui a rendu possible toute l\'électronique moderne avec sa miniaturisation.\n\n\nJack Kilby est également considéré comme l\'inventeur de la calculatrice de poche et de l\'imprimante thermique.</string>
     <string name="shortdesc_limit_unwanted">puces indésirables</string>
-    <string name="HERO_EFFECT_LIMITUNWANTED">Réduit le nombre de puces indésirables</string>
+    <string name="HERO_EFFECT_LIMITUNWANTED">réduit le nombre de puces indésirables</string>
     <string name="about_version">Version %s.</string>
     <string name="message_of_the_day">Des modifications ont été apportées au jeu, notamment au niveau des puces MEM. Consultez les notes de version dans l\'écran INFO.</string>
 </resources>
