--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -86,7 +86,7 @@ Turing wurde aufgrund seiner Homosexualität massiv diskriminiert. Er starb 1954
     <string name="query_reset">Möchtest du alle Heldinnen und Helden zurücksetzen?</string>
     <string name="query_restart_game">Wirklich ein neues Spiel beginnen?  Dadurch wird der gesamte Fortschritt zurück auf Null gesetzt.</string>
     <string name="no">Nein</string>
-    <string name="instr_7a">Einige Tipps:\n\nDenke daran, dass SHR-Chips zwar stark sind, aber Angreifer nicht ausschalten können. Sie schwächen Angreifer mit hohen Werten, aber gegen Horden schwacher Angreifer können mehrere SUB-Chips eine effektivere Verteidigung darstellen.\n\nDie Chips müssen zwischen zwei Operationen abkühlen. Stelle Helden ein, um die Wahrscheinlichkeit zu verringern, dass Chips von einem massiven Ansturm überwältigt werden.\n\nWenn du nicht weiter kommst, kannst du einen der niedrigeren Level erneut spielen, um dort einen Cryptocoin einzufangen.\n</string>
+    <string name="instr_7a">Die Chips müssen zwischen zwei Operationen abkühlen. Stelle Helden ein, um die Wahrscheinlichkeit zu verringern, dass Chips von einem massiven Ansturm überwältigt werden.\n\nWenn du nicht weiter kommst, kannst du einen der niedrigeren Level erneut spielen, um dort einen Cryptocoin einzufangen.\n</string>
     <string name="instr_8">"\nDu kannst Chips wieder verkaufen und so ihren Steckplatz neu verwenden. Ein Teil der Information wird dir dabei zurückerstattet.\n\nFalls der Chip gerade aktiv ist, beendet er noch seinen laufenden Abkühlungszyklus, bevor er verschwindet.\n    "</string>
     <string name="lovelace">
 "Ada Gräfin Lovelace gilt als die Erfinderin der Programmierung. Zusammen mit Charles Babbage arbeitete sie mit seiner Rechenmaschine. Sie stellte ein Instruktionsset für die Berechnung der Bernoullizahlen auf, das vermutlich das erste formale Programm überhaupt war.\n\nLovelace erkannte, dass die Möglichkeiten einer programmierbaren Maschine weit über arithmetische Berechnungen hinaus gingen. Sie war zudem die erste, die zwischen symbolischen Konzepten (Software) und physischen Teilen (Hardware) unterschied."
@@ -203,4 +203,5 @@ Turing wurde aufgrund seiner Homosexualität massiv diskriminiert. Er starb 1954
     <string name="HERO_EFFECT_LIMITUNWANTED">reduziert die Anzahl unerwünschter Chips</string>
     <string name="about_version">Version %s.</string>
     <string name="message_of_the_day">Es wurden Änderungen am Spiel vorgenommen, vor allem an den MEM-Chips. Lesen Sie die Versionshinweise unter INFO.</string>
+    <string name="instr_22">"Denke datran, dass SHR-Chips zwar stark sind, aber Angreifer nicht komplett ausschalten können. Sie schwächen diejenigen mit hohen Werten, aber gegen Horden schwacher Angreifer können mehrere SUB-Chips eine effektivere Verteidigung darstellen.\n "</string>
 </resources>
