--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -184,6 +184,7 @@ The programming language Pascal is named after him."</string>
     <string name="meier">Sidney K. Meier has created some of the most influential strategy games and revolutionised the genre. With comparatively simple rules, his games simulate the complexities of reality amazingly well. And they always tell a story: of the age of the railways, of the American Revolution, or - as in his most famous work \'Civilization\' - of 6000 years of human history.</string>
     <string name="kilby">Jack St. Clair Kilby had the idea of combining semiconductor elements - such as transistors or diodes - in an integrated circuit (IC) instead of wiring the components individually on a board. This was the basis for microchips and processors and made modern electronics with its miniaturisation possible in the first place.\n\n\nJack Kilby is also regarded as co-inventor of the pocket calculator and thermal printer.</string>
     <string name="chappe">Together with his four brothers Ignace, Pierre François, René and Abraham, Claude Chappe developed the optical telegraph. His \"tachygraph\" was the first system with which information could be transmitted quickly over long distances, making it the forerunner of all modern communication. Around 1830, the Chappe semaphore system connected Paris with many important cities in France and Europe.</string>
+    <string name="hamilton">As a young programmer, Margaret Elaine Hamilton worked on military projects. In the mid-1960s she joined the Apollo moon landing project and quickly became head of software development. She and her team were responsible for programming and testing the guidance computer on board the spacecraft and lunar module, with the astronauts\' lives depending on the absolute reliability of the programmes.\n\nHamilton coined the term software engineering. And she is available as a Lego figure.\n</string>
     <string name="settings_title">Settings</string>
     <string name="about_title">About</string>
     <string name="about_version">Version %s.</string>
@@ -210,8 +211,9 @@ The programming language Pascal is named after him."</string>
     <string name="shortdesc_info_gain">Information gain</string>
     <string name="shortdesc_range">%s chip range</string>
     <string name="shortdesc_refund">Refund when selling chips</string>
-    <string name="shortdesc_max_hero_upgrade">max hero level</string>
-    <string name="shortdesc_limit_unwanted">unwanted chip count</string>
+    <string name="shortdesc_max_hero_upgrade">Max hero level</string>
+    <string name="shortdesc_limit_unwanted">Unwanted chip count</string>
+    <string name="shortdesc_reduce_removal">Chip removal cost</string>
     <string name="upgrade_format">%s  [cost: %d]</string>
     <string name="toast_next_stage">Stage %d</string>
     <string name="toast_stage_cleared">Stage cleared</string>
@@ -229,9 +231,11 @@ The programming language Pascal is named after him."</string>
     <string name="HERO_EFFECT_GAININFO">Increases information gain through destroying attackers</string>
     <string name="HERO_EFFECT_RANGE">Increases %s chip range</string>
     <string name="HERO_EFFECT_LIMITUNWANTED">Reduces the number of unwanted chips</string>
+    <string name="HERO_EFFECT_DECREASEREMOVAL">Reduces the cost of unwanted chip removal</string>
     <string name="toast_loading">Loading …</string>
     <string name="name_series_1">Normal</string>
     <string name="name_series_2">Turbo</string>
+    <string name="name_series_3">Endless</string>
     <string name="message_series_unavailable">Complete all levels in \'normal\' mode first.</string>
     <string name="message_endless_unavailable">Available after completing all previous levels.</string>
     <string name="stage_reached">Stage reached: %s %d</string>
