--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -229,5 +229,9 @@ Turing wurde aufgrund seiner Homosexualität massiv diskriminiert. Er starb 1954
     <string name="shortdesc_duration">Widerstandsdauer</string>
     <string name="HERO_EFFECT_RES_STRENGTH">Erhöht die Stärke der Widerstände</string>
     <string name="HERO_EFFECT_RES_DURATION">Erhöht die Wirkungsdauer der Widerstände</string>
-    <string name="instr_leave">"Einem dieser Helden musst du einen Urlaub von 3 Leveln Dauer gewähren. In dieser Zeit steht er oder sie nicht zur Verfügung.\n "</string>
+    <string name="message_is_on_leave">%s ist derzeit im Urlaub.\n</string>
+    <string name="instr_leave">"Einem dieser Helden musst du einen Urlaub von %d Leveln Dauer gewähren. In dieser Zeit steht er oder sie nicht zur Verfügung.\n "</string>
+    <string name="heroes_on_leave_0">Kein Held ist beurlaubt.</string>
+    <string name="heroes_on_leave_1">Beurlaubt:</string>
+    <string name="heroes_on_leave_2">Beurlaubte Helden:</string>
 </resources>
